Fix HistoryManager: replace Stack with ArrayDeque for O(1) oldest-entry removal
Agent-Logs-Url: https://github.com/Am159632/OOP/sessions/6ab0730d-b529-4b46-8dba-ce031e946442

Co-authored-by: Am159632 <187307936+Am159632@users.noreply.github.com>